--- a/results/result.html
+++ b/results/result.html
@@ -8,25 +8,25 @@
 
 <body>
  
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Tallahassee,+FL/Atlanta,+GA/Denver,+CO/Hartford,+CT/Little+Rock,+AR/Phoenix,+AZ/Sacramento,+CA/Boise,+ID/Dover,+DE/Montgomery,+AL/>Map 0 Distance 11277</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Little+Rock,+AR/Phoenix,+AZ/Sacramento,+CA/Denver,+CO/Hartford,+CT/Montgomery,+AL/>Map 0 Distance 6792</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Phoenix,+AZ/Boise,+ID/Sacramento,+CA/Hartford,+CT/Atlanta,+GA/Tallahassee,+FL/Denver,+CO/Little+Rock,+AR/Dover,+DE/Montgomery,+AL/>Map 1 Distance 12251</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Little+Rock,+AR/Phoenix,+AZ/Sacramento,+CA/Denver,+CO/Hartford,+CT/Montgomery,+AL/>Map 1 Distance 6792</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Little+Rock,+AR/Atlanta,+GA/Tallahassee,+FL/Hartford,+CT/Dover,+DE/Denver,+CO/Phoenix,+AZ/Boise,+ID/Sacramento,+CA/Montgomery,+AL/>Map 2 Distance 9493</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Little+Rock,+AR/Phoenix,+AZ/Sacramento,+CA/Denver,+CO/Hartford,+CT/Montgomery,+AL/>Map 2 Distance 6792</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Denver,+CO/Tallahassee,+FL/Atlanta,+GA/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Montgomery,+AL/>Map 3 Distance 11182</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Little+Rock,+AR/Phoenix,+AZ/Sacramento,+CA/Denver,+CO/Hartford,+CT/Montgomery,+AL/>Map 3 Distance 6792</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Tallahassee,+FL/Dover,+DE/Little+Rock,+AR/Hartford,+CT/Atlanta,+GA/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Montgomery,+AL/>Map 4 Distance 10134</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Little+Rock,+AR/Sacramento,+CA/Phoenix,+AZ/Denver,+CO/Hartford,+CT/Montgomery,+AL/>Map 4 Distance 7058</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Tallahassee,+FL/Atlanta,+GA/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Montgomery,+AL/>Map 5 Distance 8832</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Little+Rock,+AR/Sacramento,+CA/Phoenix,+AZ/Denver,+CO/Hartford,+CT/Montgomery,+AL/>Map 5 Distance 7058</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Tallahassee,+FL/Atlanta,+GA/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Montgomery,+AL/>Map 6 Distance 8832</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Little+Rock,+AR/Sacramento,+CA/Phoenix,+AZ/Denver,+CO/Hartford,+CT/Montgomery,+AL/>Map 6 Distance 7058</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Atlanta,+GA/Hartford,+CT/Dover,+DE/Tallahassee,+FL/Little+Rock,+AR/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Montgomery,+AL/>Map 7 Distance 8143</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Little+Rock,+AR/Sacramento,+CA/Phoenix,+AZ/Denver,+CO/Hartford,+CT/Montgomery,+AL/>Map 7 Distance 7058</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Atlanta,+GA/Hartford,+CT/Dover,+DE/Tallahassee,+FL/Little+Rock,+AR/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Montgomery,+AL/>Map 8 Distance 8143</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Little+Rock,+AR/Sacramento,+CA/Phoenix,+AZ/Denver,+CO/Hartford,+CT/Montgomery,+AL/>Map 8 Distance 7058</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Tallahassee,+FL/Atlanta,+GA/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Montgomery,+AL/>Map 9 Distance 8832</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Little+Rock,+AR/Sacramento,+CA/Phoenix,+AZ/Denver,+CO/Hartford,+CT/Montgomery,+AL/>Map 9 Distance 7058</a></p>
 
     <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Tallahassee,+FL/Atlanta,+GA/Dover,+DE/Hartford,+CT/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Montgomery,+AL/>Map 10 Distance 0</a></p>
 
