Adding generational reporting and Excel sheet for display

--- a/results/result.html
+++ b/results/result.html
@@ -8,26 +8,38 @@
 
 <body>
  
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Little+Rock,+AR/Phoenix,+AZ/Sacramento,+CA/Denver,+CO/Hartford,+CT/Montgomery,+AL/>Map 0 Distance 6792</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Tallahassee,+FL/Atlanta,+GA/Dover,+DE/Hartford,+CT/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Montgomery,+AL/>Map 0 Distance 0</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Little+Rock,+AR/Phoenix,+AZ/Sacramento,+CA/Denver,+CO/Hartford,+CT/Montgomery,+AL/>Map 1 Distance 6792</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Dover,+DE/Hartford,+CT/Little+Rock,+AR/Sacramento,+CA/Boise,+ID/Phoenix,+AZ/Denver,+CO/Tallahassee,+FL/Atlanta,+GA/Montgomery,+AL/>Map 1 Distance 9128</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Little+Rock,+AR/Phoenix,+AZ/Sacramento,+CA/Denver,+CO/Hartford,+CT/Montgomery,+AL/>Map 2 Distance 6792</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Phoenix,+AZ/Sacramento,+CA/Boise,+ID/Denver,+CO/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 2 Distance 7819</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Little+Rock,+AR/Phoenix,+AZ/Sacramento,+CA/Denver,+CO/Hartford,+CT/Montgomery,+AL/>Map 3 Distance 6792</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Little+Rock,+AR/Phoenix,+AZ/Sacramento,+CA/Boise,+ID/Denver,+CO/Tallahassee,+FL/Dover,+DE/Hartford,+CT/Atlanta,+GA/Montgomery,+AL/>Map 3 Distance 8140</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Little+Rock,+AR/Sacramento,+CA/Phoenix,+AZ/Denver,+CO/Hartford,+CT/Montgomery,+AL/>Map 4 Distance 7058</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Atlanta,+GA/Tallahassee,+FL/Dover,+DE/Hartford,+CT/Montgomery,+AL/>Map 4 Distance 8263</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Little+Rock,+AR/Sacramento,+CA/Phoenix,+AZ/Denver,+CO/Hartford,+CT/Montgomery,+AL/>Map 5 Distance 7058</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Phoenix,+AZ/Sacramento,+CA/Boise,+ID/Denver,+CO/Little+Rock,+AR/Dover,+DE/Hartford,+CT/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 5 Distance 7838</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Little+Rock,+AR/Sacramento,+CA/Phoenix,+AZ/Denver,+CO/Hartford,+CT/Montgomery,+AL/>Map 6 Distance 7058</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Phoenix,+AZ/Sacramento,+CA/Boise,+ID/Denver,+CO/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 6 Distance 7819</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Little+Rock,+AR/Sacramento,+CA/Phoenix,+AZ/Denver,+CO/Hartford,+CT/Montgomery,+AL/>Map 7 Distance 7058</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Phoenix,+AZ/Sacramento,+CA/Boise,+ID/Denver,+CO/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 7 Distance 7819</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Little+Rock,+AR/Sacramento,+CA/Phoenix,+AZ/Denver,+CO/Hartford,+CT/Montgomery,+AL/>Map 8 Distance 7058</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Phoenix,+AZ/Sacramento,+CA/Boise,+ID/Denver,+CO/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 8 Distance 7819</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Little+Rock,+AR/Sacramento,+CA/Phoenix,+AZ/Denver,+CO/Hartford,+CT/Montgomery,+AL/>Map 9 Distance 7058</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Phoenix,+AZ/Sacramento,+CA/Boise,+ID/Denver,+CO/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 9 Distance 7819</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Tallahassee,+FL/Atlanta,+GA/Dover,+DE/Hartford,+CT/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Montgomery,+AL/>Map 10 Distance 0</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Phoenix,+AZ/Sacramento,+CA/Boise,+ID/Denver,+CO/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 10 Distance 7819</a></p>
+
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Phoenix,+AZ/Sacramento,+CA/Boise,+ID/Denver,+CO/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 11 Distance 7819</a></p>
+
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Phoenix,+AZ/Sacramento,+CA/Boise,+ID/Denver,+CO/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 12 Distance 7819</a></p>
+
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Phoenix,+AZ/Sacramento,+CA/Boise,+ID/Denver,+CO/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 13 Distance 7819</a></p>
+
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Phoenix,+AZ/Sacramento,+CA/Boise,+ID/Denver,+CO/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 14 Distance 7819</a></p>
+
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Phoenix,+AZ/Sacramento,+CA/Boise,+ID/Denver,+CO/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 15 Distance 7819</a></p>
+
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Phoenix,+AZ/Sacramento,+CA/Boise,+ID/Denver,+CO/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 16 Distance 7819</a></p>
 
 </body>
