changed counter for user to read

--- a/results/result.html
+++ b/results/result.html
@@ -8,38 +8,38 @@
 
 <body>
  
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Tallahassee,+FL/Atlanta,+GA/Dover,+DE/Hartford,+CT/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Montgomery,+AL/>Map 0 Distance 0</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Tallahassee,+FL/Atlanta,+GA/Dover,+DE/Hartford,+CT/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Montgomery,+AL/>Map 1 Distance 0</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Springfield,+IL/Dover,+DE/Hartford,+CT/Indianapolis,+IN/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Denver,+CO/Little+Rock,+AR/Tallahassee,+FL/Atlanta,+GA/Montgomery,+AL/>Map 1 Distance 8828</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Tallahassee,+FL/Little+Rock,+AR/Springfield,+IL/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Denver,+CO/Dover,+DE/Hartford,+CT/Indianapolis,+IN/Atlanta,+GA/Montgomery,+AL/>Map 2 Distance 8830</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Dover,+DE/Hartford,+CT/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 2 Distance 8130</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Little+Rock,+AR/Indianapolis,+IN/Springfield,+IL/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Denver,+CO/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 3 Distance 8521</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Dover,+DE/Hartford,+CT/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 3 Distance 8130</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 4 Distance 8200</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Dover,+DE/Hartford,+CT/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 4 Distance 8130</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 5 Distance 8200</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Dover,+DE/Hartford,+CT/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 5 Distance 8130</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 6 Distance 8200</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Dover,+DE/Hartford,+CT/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 6 Distance 8130</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 7 Distance 8200</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Dover,+DE/Hartford,+CT/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 7 Distance 8130</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 8 Distance 8200</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Dover,+DE/Hartford,+CT/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 8 Distance 8130</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 9 Distance 8200</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Dover,+DE/Hartford,+CT/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 9 Distance 8130</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 10 Distance 8200</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Dover,+DE/Hartford,+CT/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 10 Distance 8130</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 11 Distance 8200</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Dover,+DE/Hartford,+CT/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 11 Distance 8130</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 12 Distance 8200</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Dover,+DE/Hartford,+CT/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 12 Distance 8130</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 13 Distance 8200</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Dover,+DE/Hartford,+CT/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 13 Distance 8130</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 14 Distance 8200</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Dover,+DE/Hartford,+CT/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 14 Distance 8130</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 15 Distance 8200</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Dover,+DE/Hartford,+CT/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 15 Distance 8130</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 16 Distance 8200</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Dover,+DE/Hartford,+CT/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 16 Distance 8130</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 17 Distance 8200</a></p>
 
 </body>
