--- a/results/result.html
+++ b/results/result.html
@@ -4,42 +4,110 @@
 
 <head>
     <title>GA Results</title>
+    <style>
+    body {
+        margin: 0;
+        padding: 0;
+        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+        color: #060;
+    }
+    header {
+        background-color: #DFB887;
+        height: 35px;
+        width: 100%;
+        opacity: .9;
+        margin-bottom: 10px;
+    }
+    
+    header h1.logo {
+    margin: 0;
+    font-size: 1.7em;
+    color: #060;
+    text-transform: uppercase;
+    float: left;
+  }
+
+  header h1.logo:hover {
+    color: #fff;
+    text-decoration: none;
+  }
+    
+    .container {
+        width: 1200px;
+        margin: 0 auto;
+    }
+    .map-table {
+        margin: 1em 0;
+        min-width: 300px;
+    }
+    table {
+        font-family: arial, sans-serif;
+        border-collapse: collapse;
+        width: 50%;
+    }
+    td, th {
+        border: 1px solid #dddddd;
+        text-align: left;
+        padding: 8px;
+    }
+    tr:nth-child(odd) {
+        background-color: #dddddd;
+    }
+    </style>
 </head>
 
 <body>
- 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Tallahassee,+FL/Atlanta,+GA/Dover,+DE/Hartford,+CT/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Montgomery,+AL/>Map 1 Distance 0</a></p>
+ <header>
+      <div class="container">
+        <h1 class="logo">Genetic Algorithms</h1>
+        </div>
+    </header>
+    <div class="container">
+        <div>
+            <iframe src="https://www.google.com/maps/embed?pb=Montgomery%2C%20Alabama%2C%20USA%2C%20Dover%2C%20Delaware%2C%20USAHartford%2C%20Connecticut%2C%20USA%2C%20Denver%2C%20Colorado%2C%20USA%2C%20Boise%2C%20Idaho%2C%20USA%2C%20Sacramento%2C%20California%2C%20USA%2C%20Phoenix%2C%20Arizona%2C%20USA%2C%20Little%20Rock%2C%20Arkansas%2C%20USA%2C%20Atlanta%2C%20Georgia%2C%20USA%2C%20Tallahassee%2C%20Florida%2C%20USA%2C%20Montgomery%2C%20Alabama%2C%20USA" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
+        <div class= "map-table">
+            <table class="map-table">
+                <tr>
+                    <th>Map and Distance</th>
+                </tr>
+                <tr>
+                    <td>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Tallahassee,+FL/Atlanta,+GA/Dover,+DE/Hartford,+CT/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Montgomery,+AL/ target="_blank">Map 1 Distance 0</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Tallahassee,+FL/Little+Rock,+AR/Springfield,+IL/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Denver,+CO/Dover,+DE/Hartford,+CT/Indianapolis,+IN/Atlanta,+GA/Montgomery,+AL/>Map 2 Distance 8830</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Tallahassee,+FL/Atlanta,+GA/Springfield,+IL/Denver,+CO/Phoenix,+AZ/Sacramento,+CA/Boise,+ID/Hartford,+CT/Dover,+DE/Indianapolis,+IN/Little+Rock,+AR/Montgomery,+AL/ target="_blank">Map 2 Distance 8894</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Little+Rock,+AR/Indianapolis,+IN/Springfield,+IL/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Denver,+CO/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 3 Distance 8521</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Tallahassee,+FL/Atlanta,+GA/Springfield,+IL/Denver,+CO/Phoenix,+AZ/Sacramento,+CA/Boise,+ID/Hartford,+CT/Dover,+DE/Indianapolis,+IN/Little+Rock,+AR/Montgomery,+AL/ target="_blank">Map 3 Distance 8894</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 4 Distance 8200</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Tallahassee,+FL/Atlanta,+GA/Dover,+DE/Hartford,+CT/Phoenix,+AZ/Sacramento,+CA/Boise,+ID/Denver,+CO/Springfield,+IL/Indianapolis,+IN/Little+Rock,+AR/Montgomery,+AL/ target="_blank">Map 4 Distance 8566</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 5 Distance 8200</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Atlanta,+GA/Little+Rock,+AR/Phoenix,+AZ/Sacramento,+CA/Boise,+ID/Denver,+CO/Springfield,+IL/Hartford,+CT/Dover,+DE/Indianapolis,+IN/Tallahassee,+FL/Montgomery,+AL/ target="_blank">Map 5 Distance 8236</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 6 Distance 8200</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Atlanta,+GA/Little+Rock,+AR/Phoenix,+AZ/Sacramento,+CA/Boise,+ID/Denver,+CO/Springfield,+IL/Indianapolis,+IN/Dover,+DE/Hartford,+CT/Tallahassee,+FL/Montgomery,+AL/ target="_blank">Map 6 Distance 7837</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 7 Distance 8200</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Tallahassee,+FL/Little+Rock,+AR/Phoenix,+AZ/Sacramento,+CA/Boise,+ID/Denver,+CO/Springfield,+IL/Indianapolis,+IN/Hartford,+CT/Dover,+DE/Atlanta,+GA/Montgomery,+AL/ target="_blank">Map 7 Distance 7679</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 8 Distance 8200</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Tallahassee,+FL/Little+Rock,+AR/Phoenix,+AZ/Sacramento,+CA/Boise,+ID/Denver,+CO/Springfield,+IL/Indianapolis,+IN/Hartford,+CT/Dover,+DE/Atlanta,+GA/Montgomery,+AL/ target="_blank">Map 8 Distance 7679</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 9 Distance 8200</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Tallahassee,+FL/Little+Rock,+AR/Phoenix,+AZ/Sacramento,+CA/Boise,+ID/Denver,+CO/Springfield,+IL/Indianapolis,+IN/Hartford,+CT/Dover,+DE/Atlanta,+GA/Montgomery,+AL/ target="_blank">Map 9 Distance 7679</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 10 Distance 8200</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Tallahassee,+FL/Little+Rock,+AR/Phoenix,+AZ/Sacramento,+CA/Boise,+ID/Denver,+CO/Springfield,+IL/Indianapolis,+IN/Hartford,+CT/Dover,+DE/Atlanta,+GA/Montgomery,+AL/ target="_blank">Map 10 Distance 7679</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 11 Distance 8200</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Tallahassee,+FL/Little+Rock,+AR/Phoenix,+AZ/Sacramento,+CA/Boise,+ID/Denver,+CO/Springfield,+IL/Indianapolis,+IN/Hartford,+CT/Dover,+DE/Atlanta,+GA/Montgomery,+AL/ target="_blank">Map 11 Distance 7679</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 12 Distance 8200</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Tallahassee,+FL/Little+Rock,+AR/Phoenix,+AZ/Sacramento,+CA/Boise,+ID/Denver,+CO/Springfield,+IL/Indianapolis,+IN/Hartford,+CT/Dover,+DE/Atlanta,+GA/Montgomery,+AL/ target="_blank">Map 12 Distance 7679</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 13 Distance 8200</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Tallahassee,+FL/Little+Rock,+AR/Phoenix,+AZ/Sacramento,+CA/Boise,+ID/Denver,+CO/Springfield,+IL/Indianapolis,+IN/Hartford,+CT/Dover,+DE/Atlanta,+GA/Montgomery,+AL/ target="_blank">Map 13 Distance 7679</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 14 Distance 8200</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Tallahassee,+FL/Little+Rock,+AR/Phoenix,+AZ/Sacramento,+CA/Boise,+ID/Denver,+CO/Springfield,+IL/Indianapolis,+IN/Hartford,+CT/Dover,+DE/Atlanta,+GA/Montgomery,+AL/ target="_blank">Map 14 Distance 7679</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 15 Distance 8200</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Tallahassee,+FL/Little+Rock,+AR/Phoenix,+AZ/Sacramento,+CA/Boise,+ID/Denver,+CO/Springfield,+IL/Indianapolis,+IN/Hartford,+CT/Dover,+DE/Atlanta,+GA/Montgomery,+AL/ target="_blank">Map 15 Distance 7679</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 16 Distance 8200</a></p>
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Tallahassee,+FL/Little+Rock,+AR/Phoenix,+AZ/Sacramento,+CA/Boise,+ID/Denver,+CO/Springfield,+IL/Indianapolis,+IN/Hartford,+CT/Dover,+DE/Atlanta,+GA/Montgomery,+AL/ target="_blank">Map 16 Distance 7679</a></p>
 
-    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Indianapolis,+IN/Springfield,+IL/Denver,+CO/Boise,+ID/Sacramento,+CA/Phoenix,+AZ/Little+Rock,+AR/Hartford,+CT/Dover,+DE/Atlanta,+GA/Tallahassee,+FL/Montgomery,+AL/>Map 17 Distance 8200</a></p>
-
+    <p><a href= https://www.google.com/maps/dir/Montgomery,+AL/Tallahassee,+FL/Little+Rock,+AR/Phoenix,+AZ/Sacramento,+CA/Boise,+ID/Denver,+CO/Springfield,+IL/Indianapolis,+IN/Hartford,+CT/Dover,+DE/Atlanta,+GA/Montgomery,+AL/ target="_blank">Map 17 Distance 7679</a></p>
+</td>
+                </tr>
+            </table>
+        </div>
 </body>
